--- a/vercel.json
+++ b/vercel.json
@@ -2,23 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "fastapi_app/main.py",
+      "src": "api/index.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "fastapi_app/main.py"
-    },
-    {
       "src": "/(.*)",
-      "dest": "fastapi_app/main.py"
+      "dest": "api/index.py"
     }
-  ],
-  "functions": {
-    "fastapi_app/main.py": {
-      "includeFiles": "fastapi_app/**"
-    }
-  }
+  ]
 }
